--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -2,19 +2,17 @@
 
 <h1>Bids for <%= @product.name %></h1>
 
-<table>
+<table class="bids-table-<%= @product.id %>">
   <thead>
     <tr>
-      <th>Number</th>
       <th>Value</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @bids.each_with_index do |bid, index| %>
+    <% @bids.each do |bid| %>
       <tr>
-        <td><%= index + 1 %></td>
         <td><%= bid.value %></td>
       </tr>
     <% end %>
