--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', bid: @bid, product: @product %>
 
-<%= link_to 'Back', product_bids_path(@product) %>
+<%= link_to 'Back', product_bids_path(@product), class: "btn btn-default" %>
