--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -1,12 +1,10 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Bids for <%= @product.name %></h1>
 
-<table class="bids-table-<%= @product.id %>">
+<table class="bids-table-<%= @product.id %> table table-bordered">
   <thead>
     <tr>
       <th>Value</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -21,5 +19,5 @@
 
 <br>
 
-<%= link_to 'New Bid', new_product_bid_path(@product) %>
-<%= link_to 'Products Page', products_path %>
+<%= link_to 'New Bid', new_product_bid_path(@product), class: "btn btn-success" %>
+<%= link_to 'Products Page', products_path, class: "btn btn-default" %>
