--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,14 +1,17 @@
-<h1>See Here Our Live Bids!</h1>
 
+<div class="row">
+  <h1 class="text-center">See Here Our Live Bids!</h1>
+  <div class="text-center">
+    <%= link_to 'See Products', products_path, class: "btn btn-primary" %>
+  </div>
+  <br>
+</div>
 
-<%= link_to 'See Products', products_path %>
-
-<table class="bids-table">
+<table class="bids-table table table-bordered">
   <thead>
     <tr>
       <th>Product</th>
       <th>Value</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -21,5 +24,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
