--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,11 +2,10 @@
 
 <h1>Products</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -14,10 +13,10 @@
     <% @products.each do |product| %>
       <tr>
         <td><%= product.name %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'See bids', product_bids_path(product) %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', product, class: "btn btn-primary" %></td>
+        <td><%= link_to 'See bids', product_bids_path(product), class: "btn btn-success" %></td>
+        <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning" %></td>
+        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'New Product', new_product_path, class: "btn btn-primary" %>
