--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,5 +5,5 @@
   <%= @product.name %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Edit', edit_product_path(@product), class: "btn btn-primary" %> |
+<%= link_to 'Back', products_path, class: "btn btn-default" %>
