Translate strings for La Haus garage sale

--- a/app/views/bids/_form.html.erb
+++ b/app/views/bids/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :value %>
+    <%= f.label :value, "Precio" %>
     <%= f.number_field :value %>
   </div>
 
   <div class="form-group">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit "Nueva Puja", class: "btn btn-primary" %>
   </div>
 <% end %>
