--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,8 @@
 
 <div class="row">
-  <h1 class="text-center">See Here Our Live Bids!</h1>
+  <h1 class="text-center">Subasta La Haus</h1>
   <div class="text-center">
-    <%= link_to 'See Products', products_path, class: "btn btn-primary" %>
+    <%= link_to 'Ver inventario', products_path, class: "btn btn-primary" %>
   </div>
   <br>
 </div>
@@ -10,8 +10,8 @@
 <table class="bids-table table table-bordered">
   <thead>
     <tr>
-      <th>Product</th>
-      <th>Value</th>
+      <th>Item</th>
+      <th>Precio</th>
     </tr>
   </thead>
 
