--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name %>
+    <%= f.label :name, "Nombre" %>
     <%= f.text_field :name %>
   </div>
 
   <div class="form-group">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit "Crear item", class: "btn btn-primary" %>
   </div>
 <% end %>
