--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Product</h1>
+<h1>Editar item</h1>
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product, class: "btn btn-primary" %> |
-<%= link_to 'Back', products_path, class: "btn btn-default" %>
+<%= link_to 'Ver', @product, class: "btn btn-primary" %> |
+<%= link_to 'Atrás', products_path, class: "btn btn-default" %>
