--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Product</h1>
+<h1>Nuevo Item</h1>
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Back', products_path, class: "btn btn-default" %>
+<%= link_to 'Atrás', products_path, class: "btn btn-default" %>
