--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nombre:</strong>
   <%= @product.name %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product), class: "btn btn-primary" %> |
-<%= link_to 'Back', products_path, class: "btn btn-default" %>
+<%= link_to 'Editar', edit_product_path(@product), class: "btn btn-primary" %> |
+<%= link_to 'Atras', products_path, class: "btn btn-default" %>
