--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Bid for <%= @product.name %></h1>
+<h1>Nueva puja por <%= @product.name %></h1>
 
 <%= render 'form', bid: @bid, product: @product %>
 
-<%= link_to 'Back', product_bids_path(@product), class: "btn btn-default" %>
+<%= link_to 'Atrás', product_bids_path(@product), class: "btn btn-default" %>
