--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @bids.each do |bid| %>
       <tr>
-        <td><%= bid.value %></td>
+        <td><%= number_to_currency(bid.value, precision: 0) %></td>
         <td>
           <%= bid.bidder_name %>
           <% if bid.winner == true %>
